# IDF

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  makefile
.github/workflows/: workflow.yml
apps/configurator/: Configurator.cpp  Makefile  configurator.cpp
apps/decoder/: .gitignore  Makefile  decoder.cpp
apps/hidScan/: Makefile
apps/hidScanner/: .gitignore  Makefile  hidScanner.c  hidScanner.cpp
apps/socketter/: .gitignore  Makefile  README.md  socketter.cpp  tester.cpp
apps/vhc/: README  build.xml
docs/: HighLevelOverview.pptx  Promo Slide.pptx  TechnicalOverview.odp
docs/doxygen/: Doxyfile
examples/basic/: .gitignore  Makefile  basic.cpp  keyboard.cpp
examples/trick/: README.md
hardwareInterface/include/: CanDevice.hh  CanIndustrialProducts.hh  IOException.hh  InputDevice.hh  UsbDevice.hh  UsbDualShock3.hh  UsbIndustrialProducts.hh  UsbSaitek.hh  UsbSpaceExplorer.hh  UsbSpaceNavigator.hh  UsbWingMan.hh  UsbXBox.hh
hardwareInterface/src/: CanDevice.cpp  CanIndustrialProducts.cpp  InputDevice.cpp  UsbChProPedals.cpp  UsbDevice.cpp  UsbDualShock3.cpp  UsbGravis.cpp  UsbIndustrialProducts.cpp  UsbSaitek.cpp  UsbSpaceExplorer.cpp  UsbSpaceNavigator.cpp  UsbWingMan.cpp  UsbXBox.cpp  hidapi.c
include/idf/: BtXBoxOneWireless.hh  CameraController.hh  CanDevice.hh  CanIndustrialProducts.hh  ChProPedals.hh  Client.hh  CompositeCameraController.hh  CompositeController.hh  CompositeFlightController.hh  CompositeInput.hh  CompositeRoboticsController.hh  Controller.hh  Daco.hh  DacoThc.hh  Deadband.hh  Deadbandable.hh  DualShock.hh  DualShock3.hh  DualShock4.hh  Er7Orion.hh  EthernetDevice.hh  EthernetExtreme3dPro.hh  EthernetWingMan.hh  Extreme3dPro.hh  FlightController.hh  GenericJoystick.hh  Gravis.hh  HagstromKEUSB36.hh  HidDecoder.hh  HidDevice.hh  HidGenericJoystick.hh  IOException.hh  IndustrialProducts.hh  IndustrialProducts2.hh  IndustrialProducts3.hh  IndustrialProducts4.hh  Input.hh  InputDevice.hh  InputLayout.hh  Keyboard.hh  (+78 more)
inputAbstraction/include/: CompositeInput.hh  Deadband.hh  IndustrialProducts.hh  Input.hh  Output.hh  Saitek.hh  SingleInput.hh  SpaceExplorer.hh  SpaceNavigator.hh  WingMan.hh
inputAbstraction/src/: CompositeInput.cpp  Deadband.cpp  Gravis.cpp  IndustrialProducts.cpp  Input.cpp  Output.cpp  SingleInput.cpp  SpaceExplorer.cpp  SpaceNavigator.cpp  WingMan.cpp  XBox.cpp
models/: makefile
sims/: README
sims/SIM_device_and_controller/: S_define  S_overrides.mk
sims/SIM_device_only/: S_define  S_overrides.mk
sims/SIM_virtual_hand_controller/: S_overrides.mk
sims/sim_objects/: IdfInputDeviceManager.sm
simulationInterface/include/: CameraController.hh  CompositeCameraController.hh  CompositeFlightController.hh  Controller.hh  FlightController.hh  MutualExclusionGroup.hh  MutualExclusivityGroup.hh  SingleCameraController.hh  SingleFlightController.hh  StateChangeListener.hh
simulationInterface/src/: CameraController.cpp  CompositeCameraController.cpp  CompositeFlightController.cpp  Controller.cpp  FlightController.cpp  MutualExclusionGroup.cpp  MutualExclusivityGroup.cpp  SingleCameraController.cpp  SingleFlightController.cpp
source/idf/: BtXBoxOneWireless.cpp  CameraController.cpp  CanDevice.cpp  CanIndustrialProducts.cpp  ChProPedals.cpp  CompositeCameraController.cpp  CompositeFlightController.cpp  CompositeInput.cpp  CompositeRoboticsController.cpp  Controller.cpp  Daco.cpp  DacoThc.cpp  Deadband.cpp  Deadbandable.cpp  DualShock.cpp  (+96 more)
(+200 files in other folders)
